   6 May 2016
lst$ function takes the name of an expression or the expression itself, as the
rhs of an = operator. This is in line with the rest of Bracmat. Usefull when
listing code bound to a variable that has namesakes on the stack. (Before, you
had to assign the variable's value to global variable and list that global
variable instead.)

   3 May 2016
New option RAW for lst function. A RAW listing does not have (varname= at the
beginning and ); at the end. This can be used to store a data structure that,
when read, can be assigned to a variable of the programmer's own choice.
One has to take care when listing a variable that shadows another variable of
the same name. Both variables will be listed!

  20 April 2016
Bug: jsn$-1/2 jsn$-1/25 returned deformed strings. (Only if denominator is 
multiple of 2 and/or 5).

  12 April 2016
Bug: (.B+C)+(.2*(U+Z))+(.A*E)+(.B+C) did not evaluate to an expression where
the (.B+C) terms were combined. vgl() function was the culprit.

   7 April 2016
Made %zu %lu if _WIN32 defined (not __WIN32__).

   1 March 2016
Format %zu not supported in VS 2008. Made it %lu if __WIN32__ defined.

  30 December 2015
Deleted some stale comments.

  29 December 2015
First time build with Microsoft Visual Studio Express 2015 for Windows Desktop
Replaced format "%0*ld" by LONG0nD, which is defined as "%0*lld" for Win64.
Some global variables renamed + other actions to remove shadowing.

  31 August 2015
Updated case conversion with latest UnicodeData.txt (09-Feb-2015 20:08).
See http://www.unicode.org/Public/UNIDATA/UnicodeData.txt.

  21 July 2015 - 6.194
If defined with -DPYTHONINTERFACE and -DBRACMATEMBEDDED you can now make a
Python module called 'prythat'. From Python you call (in this order)
    prythat.init()
    prythat.HolyGrail(string containing Bracmat expression)
    prythat.final()
The HolyGrail can be called any number of times.
From Bracmat you can call back to Python with the functions 
    Ni$"String with Python statements"